--- a/client/index.html
+++ b/client/index.html
@@ -58,47 +58,65 @@
           <form id="login-form" class="form-grid">
             <div class="form-group">
               <label for="login-username">Username</label>
-              <input
-                type="text"
-                id="login-username"
-                placeholder="Enter your username"
-                required
-              />
+              <div style="display:flex;align-items:center;gap:0.5rem;">
+                <span style="font-size:1.2rem;">👤</span>
+                <input
+                  type="text"
+                  id="login-username"
+                  placeholder="Enter your username"
+                  required
+                  style="flex:1;"
+                />
+              </div>
             </div>
             <div class="form-group">
               <label for="login-password">Password</label>
-              <input
-                type="password"
-                id="login-password"
-                placeholder="Enter your password"
-                required
-              />
+              <div style="display:flex;align-items:center;gap:0.5rem;">
+                <span style="font-size:1.2rem;">🔒</span>
+                <input
+                  type="password"
+                  id="login-password"
+                  placeholder="Enter your password"
+                  required
+                  style="flex:1;"
+                />
+                <button type="button" id="toggle-login-password" style="background:none;border:none;font-size:1.2rem;cursor:pointer;">👁️</button>
+              </div>
             </div>
-            <button type="submit" class="btn btn-primary">Sign In</button>
-            <button id="theme-toggle-login" type="button" class="btn btn-secondary" style="margin-top:1rem;">Toggle Dark/Light Theme</button>
+            <button type="submit" class="btn btn-primary" style="margin-top:1rem;width:100%;font-size:1.1rem;">Sign In</button>
+            <button id="theme-toggle-login" type="button" class="btn btn-secondary" style="margin-top:1rem;width:100%;">Toggle Dark/Light Theme</button>
           </form>
 
           <form id="register-form" class="form-grid" style="display: none">
             <div class="form-group">
               <label for="register-username">Username</label>
-              <input
-                type="text"
-                id="register-username"
-                placeholder="Choose a username"
-                required
-              />
+              <div style="display:flex;align-items:center;gap:0.5rem;">
+                <span style="font-size:1.2rem;">👤</span>
+                <input
+                  type="text"
+                  id="register-username"
+                  placeholder="Choose a username"
+                  required
+                  style="flex:1;"
+                />
+              </div>
             </div>
             <div class="form-group">
               <label for="register-password">Password</label>
-              <input
-                type="password"
-                id="register-password"
-                placeholder="Create a password"
-                required
-              />
+              <div style="display:flex;align-items:center;gap:0.5rem;">
+                <span style="font-size:1.2rem;">🔒</span>
+                <input
+                  type="password"
+                  id="register-password"
+                  placeholder="Create a password"
+                  required
+                  style="flex:1;"
+                />
+                <button type="button" id="toggle-register-password" style="background:none;border:none;font-size:1.2rem;cursor:pointer;">👁️</button>
+              </div>
             </div>
-            <button type="submit" class="btn btn-primary">Create Account</button>
-            <button id="theme-toggle-register" type="button" class="btn btn-secondary" style="margin-top:1rem;">Toggle Dark/Light Theme</button>
+            <button type="submit" class="btn btn-primary" style="margin-top:1rem;width:100%;font-size:1.1rem;">Create Account</button>
+            <button id="theme-toggle-register" type="button" class="btn btn-secondary" style="margin-top:1rem;width:100%;">Toggle Dark/Light Theme</button>
           </form>
 
           <div id="auth-message"></div>
@@ -118,6 +136,15 @@
       document.getElementById("theme-toggle-register").onclick = function () {
         document.body.classList.toggle("dark-mode");
         localStorage.setItem("theme", document.body.classList.contains("dark-mode") ? "dark" : "light");
+      };
+      // Password visibility toggle
+      document.getElementById("toggle-login-password").onclick = function () {
+        const input = document.getElementById("login-password");
+        input.type = input.type === "password" ? "text" : "password";
+      };
+      document.getElementById("toggle-register-password").onclick = function () {
+        const input = document.getElementById("register-password");
+        input.type = input.type === "password" ? "text" : "password";
       };
     </script>
         </div>
